SalesforceAppOwnsDataEmbedding/force-app/main/default/objects/PowerBIAuthSetting__mdt/PowerBIAuthSetting__mdt.object-meta.xml
<CustomObject>
    <label>Power BI Auth Setting</label>
    <pluralLabel>Power BI Auth Settings</pluralLabel>
</CustomObject>