SalesforceAppOwnsDataEmbedding/force-app/main/default/objects/PowerBIAuthSetting__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>Client Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>