SalesforceAppOwnsDataEmbedding/force-app/main/default/objects/PowerBIAuthSetting__mdt/fields/TenantId__c.field-meta.xml
<CustomField>
    <fullName>TenantId__c</fullName>
    <label>Tenant Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>